fixed issue with map not showing up

--- a/css/events.css
+++ b/css/events.css
@@ -19,8 +19,6 @@
   background-color: white;
 }
 
-.event-container {}
-
 .event-info {
   padding-left: 20px;
   padding-bottom: 5px;
